--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
+    "@react-email/components": "^0.0.22",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "fast-sort": "^3.4.0",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.20",
+    "next-cloudinary": "^6.9.0",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-email": "^2.1.6",
+    "resend": "^3.5.0",
     "tailwindcss": "3.4.4",
-    "typescript": "5.5.2"
+    "typescript": "5.5.2",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10",
+    "prisma": "^5.17.0"
   }
 }
