--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.17.0",
     "@react-email/components": "^0.0.22",
     "@types/node": "20.14.9",
